# logia

./: .gitignore  README.md  run.sh
app/: README.md  active-keys-binder.js  dimensions.js  doc-view.js  docs-loader.js  document.js  env.js  index.js  keys-binder.js  mock_data.js  package-lock.json  package.json  rect.js  request.js  tab.js  url.js  utils.js  webpack.config.js  workspace.js
app/static/: index.html  styles.css
libcpp/: CMakeLists.txt
libcpp/include/logia/: doc-config.hh  document.hh  fwd.hh  md-gfm-doc.hh  program.hh
libcpp/src/: CMakeLists.txt  doc-config.cc  document.cc  md-gfm-doc.cc  program.cc
libpython/logia/: docconfig.py  document.py  mdgfmdoc.py  program.py
server/: Cargo.toml
server/src/: conf.rs  data_builder.rs  doc_builder.rs  doc_config.rs  main.rs  stats.rs
